_build/default/minic_parser.automaton
State 0:
program' -> . program [ # ]
-- On error shift to state 1
-- On VOID shift to state 2
-- On SUB shift to state 3
-- On INT shift to state 6
-- On IDENT shift to state 7
-- On BOOL shift to state 64
-- On ADD shift to state 65
-- On variable_set shift to state 68
-- On variable_decl_set shift to state 70
-- On typ shift to state 71
-- On simple_var_decl shift to state 141
-- On program shift to state 188
-- On global_scope_def_list shift to state 189
-- On global_scope_def shift to state 191
-- On function_decl shift to state 193
-- On EOF reduce production global_scope_def_list -> 

State 1:
program -> error . [ # ]
-- On # reduce production program -> error 

State 2:
typ -> VOID . [ IDENT ]
-- On IDENT reduce production typ -> VOID 

State 3:
variable_set -> SUB . SUB IDENT [ SEPARATOR SEMI RPAR ]
-- On SUB shift to state 4

State 4:
variable_set -> SUB SUB . IDENT [ SEPARATOR SEMI RPAR ]
-- On IDENT shift to state 5

State 5:
variable_set -> SUB SUB IDENT . [ SEPARATOR SEMI RPAR ]
-- On SEPARATOR reduce production variable_set -> SUB SUB IDENT 
-- On SEMI reduce production variable_set -> SUB SUB IDENT 
-- On RPAR reduce production variable_set -> SUB SUB IDENT 

State 6:
typ -> INT . [ IDENT ]
-- On IDENT reduce production typ -> INT 

State 7:
variable_set -> IDENT . SET expression [ SEPARATOR SEMI RPAR ]
variable_set -> IDENT . ADD ADD [ SEPARATOR SEMI RPAR ]
variable_set -> IDENT . SUB SUB [ SEPARATOR SEMI RPAR ]
-- On SUB shift to state 8
-- On SET shift to state 10
-- On ADD shift to state 62

State 8:
variable_set -> IDENT SUB . SUB [ SEPARATOR SEMI RPAR ]
-- On SUB shift to state 9

State 9:
variable_set -> IDENT SUB SUB . [ SEPARATOR SEMI RPAR ]
-- On SEPARATOR reduce production variable_set -> IDENT SUB SUB 
-- On SEMI reduce production variable_set -> IDENT SUB SUB 
-- On RPAR reduce production variable_set -> IDENT SUB SUB 

State 10:
variable_set -> IDENT SET . expression [ SEPARATOR SEMI RPAR ]
-- On LPAR shift to state 11
-- On IDENT shift to state 12
-- On CST shift to state 14
-- On BOOL_CST shift to state 15
-- On int_op shift to state 16
-- On expression shift to state 61
-- On bool_op shift to state 56

State 11:
expression -> LPAR . expression RPAR [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On LPAR shift to state 11
-- On IDENT shift to state 12
-- On CST shift to state 14
-- On BOOL_CST shift to state 15
-- On int_op shift to state 16
-- On expression shift to state 59
-- On bool_op shift to state 56

State 12:
expression -> IDENT . LPAR funcall_args RPAR [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
expression -> IDENT . [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On LPAR shift to state 13
-- On XOR reduce production expression -> IDENT 
-- On SUB reduce production expression -> IDENT 
-- On SEPARATOR reduce production expression -> IDENT 
-- On SEMI reduce production expression -> IDENT 
-- On RPAR reduce production expression -> IDENT 
-- On OR reduce production expression -> IDENT 
-- On NEQ reduce production expression -> IDENT 
-- On MUL reduce production expression -> IDENT 
-- On MOD reduce production expression -> IDENT 
-- On LT reduce production expression -> IDENT 
-- On LET reduce production expression -> IDENT 
-- On GT reduce production expression -> IDENT 
-- On GET reduce production expression -> IDENT 
-- On EQ reduce production expression -> IDENT 
-- On END reduce production expression -> IDENT 
-- On DOTS2 reduce production expression -> IDENT 
-- On DIV reduce production expression -> IDENT 
-- On BXOR reduce production expression -> IDENT 
-- On BOR reduce production expression -> IDENT 
-- On BNEQ reduce production expression -> IDENT 
-- On BAND reduce production expression -> IDENT 
-- On AND reduce production expression -> IDENT 
-- On ADD reduce production expression -> IDENT 

State 13:
expression -> IDENT LPAR . funcall_args RPAR [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On LPAR shift to state 11
-- On IDENT shift to state 12
-- On CST shift to state 14
-- On BOOL_CST shift to state 15
-- On int_op shift to state 16
-- On funcall_args shift to state 17
-- On expression shift to state 19
-- On bool_op shift to state 56
-- On RPAR reduce production funcall_args -> 

State 14:
expression -> CST . [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On XOR reduce production expression -> CST 
-- On SUB reduce production expression -> CST 
-- On SEPARATOR reduce production expression -> CST 
-- On SEMI reduce production expression -> CST 
-- On RPAR reduce production expression -> CST 
-- On OR reduce production expression -> CST 
-- On NEQ reduce production expression -> CST 
-- On MUL reduce production expression -> CST 
-- On MOD reduce production expression -> CST 
-- On LT reduce production expression -> CST 
-- On LET reduce production expression -> CST 
-- On GT reduce production expression -> CST 
-- On GET reduce production expression -> CST 
-- On EQ reduce production expression -> CST 
-- On END reduce production expression -> CST 
-- On DOTS2 reduce production expression -> CST 
-- On DIV reduce production expression -> CST 
-- On BXOR reduce production expression -> CST 
-- On BOR reduce production expression -> CST 
-- On BNEQ reduce production expression -> CST 
-- On BAND reduce production expression -> CST 
-- On AND reduce production expression -> CST 
-- On ADD reduce production expression -> CST 

State 15:
expression -> BOOL_CST . [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On XOR reduce production expression -> BOOL_CST 
-- On SUB reduce production expression -> BOOL_CST 
-- On SEPARATOR reduce production expression -> BOOL_CST 
-- On SEMI reduce production expression -> BOOL_CST 
-- On RPAR reduce production expression -> BOOL_CST 
-- On OR reduce production expression -> BOOL_CST 
-- On NEQ reduce production expression -> BOOL_CST 
-- On MUL reduce production expression -> BOOL_CST 
-- On MOD reduce production expression -> BOOL_CST 
-- On LT reduce production expression -> BOOL_CST 
-- On LET reduce production expression -> BOOL_CST 
-- On GT reduce production expression -> BOOL_CST 
-- On GET reduce production expression -> BOOL_CST 
-- On EQ reduce production expression -> BOOL_CST 
-- On END reduce production expression -> BOOL_CST 
-- On DOTS2 reduce production expression -> BOOL_CST 
-- On DIV reduce production expression -> BOOL_CST 
-- On BXOR reduce production expression -> BOOL_CST 
-- On BOR reduce production expression -> BOOL_CST 
-- On BNEQ reduce production expression -> BOOL_CST 
-- On BAND reduce production expression -> BOOL_CST 
-- On AND reduce production expression -> BOOL_CST 
-- On ADD reduce production expression -> BOOL_CST 

State 16:
expression -> int_op . [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On XOR reduce production expression -> int_op 
-- On SUB reduce production expression -> int_op 
-- On SEPARATOR reduce production expression -> int_op 
-- On SEMI reduce production expression -> int_op 
-- On RPAR reduce production expression -> int_op 
-- On OR reduce production expression -> int_op 
-- On NEQ reduce production expression -> int_op 
-- On MUL reduce production expression -> int_op 
-- On MOD reduce production expression -> int_op 
-- On LT reduce production expression -> int_op 
-- On LET reduce production expression -> int_op 
-- On GT reduce production expression -> int_op 
-- On GET reduce production expression -> int_op 
-- On EQ reduce production expression -> int_op 
-- On END reduce production expression -> int_op 
-- On DOTS2 reduce production expression -> int_op 
-- On DIV reduce production expression -> int_op 
-- On BXOR reduce production expression -> int_op 
-- On BOR reduce production expression -> int_op 
-- On BNEQ reduce production expression -> int_op 
-- On BAND reduce production expression -> int_op 
-- On AND reduce production expression -> int_op 
-- On ADD reduce production expression -> int_op 

State 17:
expression -> IDENT LPAR funcall_args . RPAR [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On RPAR shift to state 18

State 18:
expression -> IDENT LPAR funcall_args RPAR . [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On XOR reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On SUB reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On SEPARATOR reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On SEMI reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On RPAR reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On OR reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On NEQ reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On MUL reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On MOD reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On LT reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On LET reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On GT reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On GET reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On EQ reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On END reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On DOTS2 reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On DIV reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On BXOR reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On BOR reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On BNEQ reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On BAND reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On AND reduce production expression -> IDENT LPAR funcall_args RPAR 
-- On ADD reduce production expression -> IDENT LPAR funcall_args RPAR 

State 19:
bool_op -> expression . LT expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . GT expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . LET expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . GET expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . EQ expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . AND expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BAND expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . OR expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BOR expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . XOR expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BXOR expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . NEQ expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BNEQ expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
funcall_args -> expression . [ RPAR ]
funcall_args -> expression . SEPARATOR funcall_args [ RPAR ]
int_op -> expression . ADD expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . MUL expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . DIV expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . MOD expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . SUB expression [ XOR SUB SEPARATOR RPAR OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD ]
-- On XOR shift to state 20
-- On SUB shift to state 22
-- On SEPARATOR shift to state 57
-- On OR shift to state 24
-- On NEQ shift to state 26
-- On MUL shift to state 28
-- On MOD shift to state 30
-- On LT shift to state 32
-- On LET shift to state 34
-- On GT shift to state 36
-- On GET shift to state 38
-- On EQ shift to state 40
-- On DIV shift to state 42
-- On BXOR shift to state 44
-- On BOR shift to state 46
-- On BNEQ shift to state 48
-- On BAND shift to state 50
-- On AND shift to state 52
-- On ADD shift to state 54
-- On RPAR reduce production funcall_args -> expression 

State 20:
bool_op -> expression XOR . expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On LPAR shift to state 11
-- On IDENT shift to state 12
-- On CST shift to state 14
-- On BOOL_CST shift to state 15
-- On int_op shift to state 16
-- On expression shift to state 21
-- On bool_op shift to state 56

State 21:
bool_op -> expression . LT expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . GT expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . LET expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . GET expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . EQ expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . AND expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BAND expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . OR expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BOR expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . XOR expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression XOR expression . [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BXOR expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . NEQ expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BNEQ expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . ADD expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . MUL expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . DIV expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . MOD expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . SUB expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On XOR shift to state 20
-- On SUB shift to state 22
-- On OR shift to state 24
-- On NEQ shift to state 26
-- On MUL shift to state 28
-- On MOD shift to state 30
-- On LT shift to state 32
-- On LET shift to state 34
-- On GT shift to state 36
-- On GET shift to state 38
-- On EQ shift to state 40
-- On DIV shift to state 42
-- On BXOR shift to state 44
-- On BOR shift to state 46
-- On BNEQ shift to state 48
-- On BAND shift to state 50
-- On AND shift to state 52
-- On ADD shift to state 54
-- On XOR reduce production bool_op -> expression XOR expression 
-- On SUB reduce production bool_op -> expression XOR expression 
-- On SEPARATOR reduce production bool_op -> expression XOR expression 
-- On SEMI reduce production bool_op -> expression XOR expression 
-- On RPAR reduce production bool_op -> expression XOR expression 
-- On OR reduce production bool_op -> expression XOR expression 
-- On NEQ reduce production bool_op -> expression XOR expression 
-- On MUL reduce production bool_op -> expression XOR expression 
-- On MOD reduce production bool_op -> expression XOR expression 
-- On LT reduce production bool_op -> expression XOR expression 
-- On LET reduce production bool_op -> expression XOR expression 
-- On GT reduce production bool_op -> expression XOR expression 
-- On GET reduce production bool_op -> expression XOR expression 
-- On EQ reduce production bool_op -> expression XOR expression 
-- On END reduce production bool_op -> expression XOR expression 
-- On DOTS2 reduce production bool_op -> expression XOR expression 
-- On DIV reduce production bool_op -> expression XOR expression 
-- On BXOR reduce production bool_op -> expression XOR expression 
-- On BOR reduce production bool_op -> expression XOR expression 
-- On BNEQ reduce production bool_op -> expression XOR expression 
-- On BAND reduce production bool_op -> expression XOR expression 
-- On AND reduce production bool_op -> expression XOR expression 
-- On ADD reduce production bool_op -> expression XOR expression 
** Conflict on XOR SUB OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD

State 22:
int_op -> expression SUB . expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On LPAR shift to state 11
-- On IDENT shift to state 12
-- On CST shift to state 14
-- On BOOL_CST shift to state 15
-- On int_op shift to state 16
-- On expression shift to state 23
-- On bool_op shift to state 56

State 23:
bool_op -> expression . LT expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . GT expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . LET expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . GET expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . EQ expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . AND expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BAND expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . OR expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BOR expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . XOR expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BXOR expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . NEQ expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
bool_op -> expression . BNEQ expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . ADD expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . MUL expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . DIV expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . MOD expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression . SUB expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
int_op -> expression SUB expression . [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On XOR shift to state 20
-- On SUB shift to state 22
-- On OR shift to state 24
-- On NEQ shift to state 26
-- On MUL shift to state 28
-- On MOD shift to state 30
-- On LT shift to state 32
-- On LET shift to state 34
-- On GT shift to state 36
-- On GET shift to state 38
-- On EQ shift to state 40
-- On DIV shift to state 42
-- On BXOR shift to state 44
-- On BOR shift to state 46
-- On BNEQ shift to state 48
-- On BAND shift to state 50
-- On AND shift to state 52
-- On ADD shift to state 54
-- On XOR reduce production int_op -> expression SUB expression 
-- On SUB reduce production int_op -> expression SUB expression 
-- On SEPARATOR reduce production int_op -> expression SUB expression 
-- On SEMI reduce production int_op -> expression SUB expression 
-- On RPAR reduce production int_op -> expression SUB expression 
-- On OR reduce production int_op -> expression SUB expression 
-- On NEQ reduce production int_op -> expression SUB expression 
-- On MUL reduce production int_op -> expression SUB expression 
-- On MOD reduce production int_op -> expression SUB expression 
-- On LT reduce production int_op -> expression SUB expression 
-- On LET reduce production int_op -> expression SUB expression 
-- On GT reduce production int_op -> expression SUB expression 
-- On GET reduce production int_op -> expression SUB expression 
-- On EQ reduce production int_op -> expression SUB expression 
-- On END reduce production int_op -> expression SUB expression 
-- On DOTS2 reduce production int_op -> expression SUB expression 
-- On DIV reduce production int_op -> expression SUB expression 
-- On BXOR reduce production int_op -> expression SUB expression 
-- On BOR reduce production int_op -> expression SUB expression 
-- On BNEQ reduce production int_op -> expression SUB expression 
-- On BAND reduce production int_op -> expression SUB expression 
-- On AND reduce production int_op -> expression SUB expression 
-- On ADD reduce production int_op -> expression SUB expression 
** Conflict on XOR SUB OR NEQ MUL MOD LT LET GT GET EQ DIV BXOR BOR BNEQ BAND AND ADD

State 24:
bool_op -> expression OR . expression [ XOR SUB SEPARATOR SEMI RPAR OR NEQ MUL MOD LT LET GT GET EQ END DOTS2 DIV BXOR BOR BNEQ BAND AND ADD ]
-- On LPAR shift to state 11
-- On IDENT shift to state 12
-- On CST shift to state 14
-- On BOOL_CST shift to state 15
-- On int_op shift to state 16
-- On expression shift to state 25
-- On bool_op shift to state 56
